force-app/main/default/objects/PuppyLog__c/PuppyLog__c.object-meta.xml
<CustomObject>
    <description>Log records from Puppy Raisers</description>
    <label>Puppy Log</label>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>Puppy Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Puppy Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>