force-app/main/default/objects/PuppyLog__c/fields/Dog__c.field-meta.xml
<CustomField>
    <fullName>Dog__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dog</label>
    <referenceTo>Dog__c</referenceTo>
    <relationshipLabel>Puppy Raiser Logs</relationshipLabel>
    <relationshipName>PuppyLogs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>