force-app/main/default/objects/PuppyLog__c/fields/Raiser__c.field-meta.xml
<CustomField>
    <fullName>Raiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Puppy Raiser</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Puppy Logs (Puppy Raiser)</relationshipLabel>
    <relationshipName>Puppy_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>