force-app/main/default/objects/PuppyLog__c/fields/RequestSupportFromAtlas__c.field-meta.xml
<CustomField>
    <fullName>RequestSupportFromAtlas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request support from Atlas?</label>
    <type>Checkbox</type>
</CustomField>