force-app/main/default/objects/PuppyLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Raiser__c</columns>
    <columns>Dog__c</columns>
    <columns>RequestSupportFromAtlas__c</columns>
    <columns>AdditionalInformation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>